# pan24-generative-ai-authorship-verification

./: .dockerignore  .gitignore  Dockerfile  Evaluator.Dockerfile  README.md  build-docker.sh  pyproject.toml  slurm-sbatch-generate.sh  typical-generation-artifacts.txt
data/: seed.txt
data/article-summaries/news-2021-01-01-2021-12-31-bideninauguration/: art-000.json  art-001.json  art-002.json  art-003.json  art-004.json  art-007.json  art-008.json  art-010.json  art-012.json  art-014.json  art-015.json  art-017.json  art-018.json  art-019.json  art-020.json  art-022.json  art-023.json  art-024.json  art-025.json  art-026.json  art-027.json  art-028.json  art-031.json  art-033.json  art-034.json  art-037.json  art-038.json  art-042.json  art-043.json  art-045.json  art-048.json  art-050.json  art-052.json  art-053.json  art-054.json  art-055.json  art-056.json  art-057.json  art-059.json  art-061.json  (+13 more)
data/article-summaries/news-2021-01-01-2021-12-31-capitolriot/: art-000.json  art-001.json  art-002.json  art-003.json  art-004.json  art-005.json  art-008.json  art-009.json  art-010.json  art-011.json  art-012.json  art-013.json  art-014.json  art-015.json  art-016.json  art-017.json  art-018.json  art-019.json  art-021.json  art-023.json  art-027.json  art-028.json  art-029.json  art-030.json  art-031.json  art-032.json  art-034.json  art-036.json  art-038.json  art-039.json  art-040.json  art-041.json  art-043.json  art-045.json  art-046.json  art-047.json  art-048.json  art-050.json  art-051.json  art-052.json  (+13 more)
data/article-summaries/news-2021-01-01-2021-12-31-citibank500millionmistake/: art-000.json  art-001.json  art-003.json  art-004.json  art-005.json  art-007.json  art-008.json  art-009.json  art-011.json  art-012.json  art-014.json  art-020.json  art-021.json  art-025.json  art-026.json  art-029.json  art-031.json  art-032.json  art-036.json  art-037.json  art-039.json
data/article-summaries/news-2021-01-01-2021-12-31-covid19/: art-000.json  (+75 more)
data/eval-figures/: eloquent-effectiveness-mean.csv  eloquent-effectiveness.csv  system-effectiveness-adjusted.csv  system-effectiveness-adjusted.html  system-effectiveness-adjusted.tex  system-effectiveness.csv  team-effectiveness-adjusted.csv  team-effectiveness.csv
dataset/: gnews_url.proto  llm_generate.py  news_source.py
dataset/prompt_templates/: news_article_chat.jinja2
evaluation/: pan24-generative-authorship-evaluation.ipynb  submission-to-resources.json  team-to-submissions.json
llm_detection_tools/: llm_stats.py
pan24_llm_baselines/: baseline.py  binoculars.py  main.py  torch_util.py  unmasking.py  util.py
pan24_llm_baselines/detectors/: __init__.py  binoculars.py  degeneratellm.py  detectgpt.py  detectllm.py  detector_base.py  fastdetectgpt.py  ppmd.py  unmasking.py
pan24_llm_baselines/impl/: binoculars.py  detector_base.py  ppmd.py  unmasking.py
pan24_llm_baselines/perturbators/: __init__.py  perturbator_base.py  t5_mask.py
pan24_llm_baselines/thirdparty_binoculars/: __init__.py  detector.py
pan24_llm_dataset/: dataset_sample.py  llm_generate.py  news_source.py
pan24_llm_evaluator/: __init__.py  evaluator.py
pan24_task_eval/: create-participant-template.py  evaluation-scores.json  pan24-create-evaluation-scores.ipynb  pan24-execute-all-submissions-on-all-datasets.py  pan24-generative-authorship-evaluation.ipynb  submission-to-resources.json  team-friendly-names.json  team-to-notebook.json  team-to-submissions.json  teams-to-notebook.json  teams-to-systems.json
(+1156 files in other folders)
