[tool.poetry]
name = "pan24-generative-authorship-detection"
version = "0.1.0"
description = ""
authors = ["Janek Bevendorff <janek.bevendorff@uni-weimar.de>"]
readme = "README.md"
packages = [
    { include = "pan24_llm_dataset" }
]

[tool.poetry.dependencies]
python = "^3.10"
gnews = "^0.3.6"
click = "^8.1.7"
newspaper3k = "^0.2.8"
betterproto = {extras = ["compiler"], version = "^1.2.5"}
seaborn = "^0.13.2"
pyarrow = "^15.0.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
transformers = {extras = ["torch"], version = "^4.37.2"}
openai = "^1.10.0"
jsonschema = "^4.21.1"
markdown = "^3.5.2"
resiliparse = "^0.14.5"
backoff = "^2.2.1"
scipy = "^1.12.0"
bitsandbytes = "^0.42.0"
optimum = "^1.16.2"
tqdm = "^4.66.1"
transformers-stream-generator = "^0.0.4"
jinja2 = "^3.1.3"

[tool.poetry.scripts]
news-source = 'pan24_llm_dataset.news_source:main'
llm-generate = 'pan24_llm_dataset.llm_generate:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
